--- a/models/colab/anyangle_phone_stand_colab.ipynb
+++ b/models/colab/anyangle_phone_stand_colab.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/NinjaAtWork/TestGit/blob/master/models/colab/anyangle_phone_stand_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "95ZKjNWsg7Nr"
       },
       "source": [
@@ -27,13 +37,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 155,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "N9j0I72eg7Nv",
-        "outputId": "09f335c1-7a15-479e-b390-cf789b0b7fee"
+        "outputId": "9c893297-aca7-4d66-e547-12e36e69eb98"
       },
       "outputs": [
         {
@@ -57,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 156,
       "metadata": {
         "id": "UIK9l6C6g7Nw"
       },
@@ -68,7 +78,7 @@
         "design_name = 'anyangle_phone_stand'\n",
         "nozzle_temp = 195\n",
         "bed_temp = 65\n",
-        "material_flow_percent = 170\n",
+        "material_flow_percent = 150\n",
         "print_speed_percent = 100\n",
         "fan_percent = 50\n",
         "printer_name='generic' # generic / ultimaker2plus / prusa_i3 / ender_3 / cr_10 / bambulab_x1 / toolchanger_T0"
@@ -76,7 +86,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 157,
       "metadata": {
         "id": "pnFBWutLg7Nx"
       },
@@ -96,7 +106,7 @@
         "# Stand Height (mm) -\n",
         "# default value: 30 ; guideline range: 20 to 40\n",
         "\n",
-        "angles = 13\n",
+        "angles = 9\n",
         "# Stand Angles (mm) - The number of angles the stand can orient the phone in landscape mode\n",
         "# default value: 13 ; guideline range: 9 to 19\n",
         "\n",
@@ -115,7 +125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 158,
       "metadata": {
         "id": "SVHS_ghQg7Ny"
       },
@@ -126,11 +136,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 159,
       "metadata": {
-        "id": "sb2O-zA4g7Nz"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sb2O-zA4g7Nz",
+        "outputId": "fdabdb29-f0f4-45e7-f080-f12474594c9a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Final phone_thickness: 8.775\n"
+          ]
+        }
+      ],
       "source": [
         "# generate the design (make sure you've run the above cells before running this cell)\n",
         "\n",
@@ -141,11 +163,11 @@
         "    EH = 3*EH\n",
         "layers = int(height/EH)\n",
         "overlap = EW*0.25  # overlap between extrusions when the waves touch tip to tip\n",
-        "initial_print_speed = 500  # print speed for the first layer\n",
+        "initial_print_speed = 300  # print speed for the first layer\n",
         "# number of layers (after the first layer) during which speed increases\n",
         "layers_for_speed_increase = 2\n",
         "# print speed increases to this gradually over layers 2 & 3 (if layers_for_speed_increase=2)\n",
-        "main_print_speed = 2*initial_print_speed\n",
+        "main_print_speed = 4*initial_print_speed\n",
         "\n",
         "\n",
         "amp_in_out = 3.25  # 3 # mm # 2.5?\n",
@@ -169,12 +191,12 @@
         "amp_in_out = amp_in_out*wave_size_percent/100\n",
         "all_contraction_fraction = all_contraction_fraction*clamping_tightness_percent/100\n",
         "\n",
-        "segs = angles*8  # 8#4#8#16 # segments per half-circle plus an angle\n",
-        "outer_wave_shape_factor, mid_wave_shape_factor, inner_wave_shape_factor = 2, 1.75, 1.5\n",
-        "# 8,8,8#4,4,4#1.5,1,1 # 2,2,2#5,5,5 #3,1,2 #1.5,1,1...(GOOD FOR 13 ANGLES:2,1.5,1.5)\n",
+        "segs = angles*16  # 8#4#8#16 # segments per half-circle plus an angle\n",
+        "outer_wave_shape_factor, mid_wave_shape_factor, inner_wave_shape_factor = 3, 1.5, 1.5\n",
+        "# 8,8,8#4,4,4#1.5,1,1 # 2,2,2#5,5,5 #3,1,2 #1.5,1,1...(GOOD FOR 13 ANGLES:2,1.25,1)\n",
         "\n",
         "# 8#4#16#32 # segments for each of the semicircles at the ends of the part\n",
-        "segs_semicircles = 16\n",
+        "segs_semicircles = 32\n",
         "\n",
         "if angry:\n",
         "  outer_wave_shape_factor, mid_wave_shape_factor, inner_wave_shape_factor = 8, 8, 8\n",
@@ -184,7 +206,6 @@
         "phone_thickness -= 1\n",
         "# this factor naturally increases the side of the slot, so it must be reduced now to compensate\n",
         "phone_thickness = phone_thickness*(1-all_contraction_fraction)\n",
-        "\n",
         "# next line is means the sides of the phone protrude to the depth of the first fluctating sine wave (in2) as opposed to the medial axis\n",
         "medial_rad = phone_width/2 + amp_mid + EW\n",
         "rad_in2 = medial_rad - ((EW-overlap)/2) - amp_mid - (EW-overlap)\n",
@@ -344,19 +365,20 @@
         "# offset the whole procedure. z dictates the gap between the nozzle and the bed for the first layer, assuming the model was designed with a first layer z-position of 0\n",
         "model_offset = fc.Vector(x=path_offset_xy, y=path_offset_xy, z=0.8*EH)\n",
         "\n",
-        "steps = fc.move(mydesign_multilayer, model_offset)\n"
+        "steps = fc.move(mydesign_multilayer, model_offset)\n",
+        "print(\"Final phone_thickness:\", phone_thickness)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 160,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
         },
         "id": "evfJ6S5_g7N0",
-        "outputId": "2dbb8d09-0840-4862-e6fa-478864651d2b"
+        "outputId": "2e1d7a80-127b-444c-c4df-bd5ba0f8b2ac"
       },
       "outputs": [
         {
@@ -418,7 +440,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_6caffc01-1ef5-4016-b7d6-0ae08da1c4b6\", \"anyangle_phone_stand.gcode\", 1367727)"
+              "download(\"download_e3da4168-de7e-40a0-92f1-95ca90e89caf\", \"anyangle_phone_stand.gcode\", 2004152)"
             ]
           },
           "metadata": {}
@@ -501,7 +523,8 @@
       }
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
