--- a/models/colab/anyangle_phone_stand_colab.ipynb
+++ b/models/colab/anyangle_phone_stand_colab.ipynb
@@ -37,13 +37,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 155,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "N9j0I72eg7Nv",
-        "outputId": "9c893297-aca7-4d66-e547-12e36e69eb98"
+        "outputId": "2abbfd9a-0712-44f4-f61d-a3b5281b2c80"
       },
       "outputs": [
         {
@@ -52,7 +52,8 @@
           "text": [
             "  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
             "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
-            "  Preparing metadata (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n"
+            "  Preparing metadata (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Building wheel for fullcontrol (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n"
           ]
         }
       ],
@@ -67,7 +68,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 156,
+      "execution_count": 2,
       "metadata": {
         "id": "UIK9l6C6g7Nw"
       },
@@ -86,7 +87,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 157,
+      "execution_count": 3,
       "metadata": {
         "id": "pnFBWutLg7Nx"
       },
@@ -94,11 +95,11 @@
       "source": [
         "# design parameters\n",
         "\n",
-        "phone_width = 79\n",
+        "phone_width = 75\n",
         "# Phone Width (mm) - Measure with the case on if using one\n",
         "# default value: 75 ; guideline range: 10 to 200\n",
         "\n",
-        "phone_thickness = 10\n",
+        "phone_thickness = 9\n",
         "# Phone Thickness (mm) - Measure with the case on if using one\n",
         "# default value: 9 ; guideline range: 4 to 20\n",
         "\n",
@@ -125,7 +126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 158,
+      "execution_count": 9,
       "metadata": {
         "id": "SVHS_ghQg7Ny"
       },
@@ -136,20 +137,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 159,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "sb2O-zA4g7Nz",
-        "outputId": "fdabdb29-f0f4-45e7-f080-f12474594c9a"
+        "outputId": "d3367a4f-b35b-4612-d0c4-30f96a4b5751"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Final phone_thickness: 8.775\n"
+            "Final phone_thickness: 5.48925\n"
           ]
         }
       ],
@@ -192,7 +193,7 @@
         "all_contraction_fraction = all_contraction_fraction*clamping_tightness_percent/100\n",
         "\n",
         "segs = angles*16  # 8#4#8#16 # segments per half-circle plus an angle\n",
-        "outer_wave_shape_factor, mid_wave_shape_factor, inner_wave_shape_factor = 3, 1.5, 1.5\n",
+        "outer_wave_shape_factor, mid_wave_shape_factor, inner_wave_shape_factor = 2, 1.5, 1.5\n",
         "# 8,8,8#4,4,4#1.5,1,1 # 2,2,2#5,5,5 #3,1,2 #1.5,1,1...(GOOD FOR 13 ANGLES:2,1.25,1)\n",
         "\n",
         "# 8#4#16#32 # segments for each of the semicircles at the ends of the part\n",
@@ -371,14 +372,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 160,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
         },
         "id": "evfJ6S5_g7N0",
-        "outputId": "2e1d7a80-127b-444c-c4df-bd5ba0f8b2ac"
+        "outputId": "b5879832-9063-4e11-eb5c-7d3c18d8a3d4"
       },
       "outputs": [
         {
@@ -440,7 +441,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_e3da4168-de7e-40a0-92f1-95ca90e89caf\", \"anyangle_phone_stand.gcode\", 2004152)"
+              "download(\"download_584e33f6-1496-431e-a1f0-68648fe97b3e\", \"anyangle_phone_stand.gcode\", 2004601)"
             ]
           },
           "metadata": {}
@@ -451,7 +452,7 @@
         "\n",
         "if target == 'gcode':\n",
         "    # add point at start of print for a nice lead-in line\n",
-        "    steps.insert(0, fc.Point(x=path_offset_xy-medial_rad, y=path_offset_xy-medial_rad, z=steps[0].z))\n",
+        "    steps.insert(0, fc.Point(x=0, y=0, z=steps[0].z))\n",
         "    gcode_controls = fc.GcodeControls(\n",
         "        printer_name=printer_name,\n",
         "\n",
