--- a/models/colab/anyangle_phone_stand_colab.ipynb
+++ b/models/colab/anyangle_phone_stand_colab.ipynb
@@ -137,23 +137,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 12,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "sb2O-zA4g7Nz",
-        "outputId": "d3367a4f-b35b-4612-d0c4-30f96a4b5751"
+        "id": "sb2O-zA4g7Nz"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Final phone_thickness: 5.48925\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# generate the design (make sure you've run the above cells before running this cell)\n",
         "\n",
@@ -366,8 +354,7 @@
         "# offset the whole procedure. z dictates the gap between the nozzle and the bed for the first layer, assuming the model was designed with a first layer z-position of 0\n",
         "model_offset = fc.Vector(x=path_offset_xy, y=path_offset_xy, z=0.8*EH)\n",
         "\n",
-        "steps = fc.move(mydesign_multilayer, model_offset)\n",
-        "print(\"Final phone_thickness:\", phone_thickness)"
+        "steps = fc.move(mydesign_multilayer, model_offset)\n"
       ]
     },
     {
@@ -453,9 +440,9 @@
         "if target == 'gcode':\n",
         "    # add point at start of print for a nice lead-in line\n",
         "    steps.insert(0, fc.Point(x=0, y=0, z=steps[0].z))\n",
+        "    # create the initialize procedure (i.e. start_gcode)\n",
         "    gcode_controls = fc.GcodeControls(\n",
         "        printer_name=printer_name,\n",
-        "\n",
         "        initialization_data={\n",
         "            'primer': 'travel',\n",
         "            'print_speed': initial_print_speed,\n",
@@ -465,6 +452,17 @@
         "            'fan_percent': fan_percent,\n",
         "            'extrusion_width': EW,\n",
         "            'extrusion_height': EH})\n",
+        "\n",
+        "    # create the starting procedure\n",
+        "    starting_procedure_steps = []\n",
+        "\n",
+        "    # create the ending procedure\n",
+        "    ending_procedure_steps = []\n",
+        "    ending_procedure_steps.append(fc.ManualGcode(text='G28 ; home'))\n",
+        "\n",
+        "    # combine start procedure and design to create the overall procedure\n",
+        "    steps = starting_procedure_steps + steps + ending_procedure_steps\n",
+        "\n",
         "    gcode = fc.transform(steps, 'gcode', gcode_controls)\n",
         "    open(f'{design_name}.gcode', 'w').write(gcode)\n",
         "    files.download(f'{design_name}.gcode')\n",
