--- a/models/colab/anyangle_phone_stand_colab.ipynb
+++ b/models/colab/anyangle_phone_stand_colab.ipynb
@@ -359,14 +359,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
         },
         "id": "evfJ6S5_g7N0",
-        "outputId": "b5879832-9063-4e11-eb5c-7d3c18d8a3d4"
+        "outputId": "38c1a9a8-3b59-424b-9118-ea1d68c652b1"
       },
       "outputs": [
         {
@@ -428,7 +428,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_584e33f6-1496-431e-a1f0-68648fe97b3e\", \"anyangle_phone_stand.gcode\", 2004601)"
+              "download(\"download_ce6cc025-f7ee-44a8-9b97-903a393dd1a6\", \"anyangle_phone_stand.gcode\", 2004707)"
             ]
           },
           "metadata": {}
@@ -455,9 +455,13 @@
         "\n",
         "    # create the starting procedure\n",
         "    starting_procedure_steps = []\n",
+        "    starting_procedure_steps.append(fc.ManualGcode(text='\\n;-----\\n; END OF STARTING PROCEDURE\\n;-----'))\n",
         "\n",
         "    # create the ending procedure\n",
         "    ending_procedure_steps = []\n",
+        "    ending_procedure_steps.append(fc.ManualGcode(text='\\n;-----\\n; START OF ENDING PROCEDURE\\n;-----'))\n",
+        "    ending_procedure_steps.append(fc.PrinterCommand(id='retract'))\n",
+        "    ending_procedure_steps.append(fc.ManualGcode(text='G91 ; relative coordinates'))\n",
         "    ending_procedure_steps.append(fc.ManualGcode(text='G28 ; home'))\n",
         "\n",
         "    # combine start procedure and design to create the overall procedure\n",
