--- a/models/colab/anyangle_phone_stand_colab.ipynb
+++ b/models/colab/anyangle_phone_stand_colab.ipynb
@@ -455,14 +455,20 @@
         "\n",
         "    # create the starting procedure\n",
         "    starting_procedure_steps = []\n",
+        "    starting_procedure_steps.append(fc.ManualGcode(text='G28 ; home'))\n",
         "    starting_procedure_steps.append(fc.ManualGcode(text='\\n;-----\\n; END OF STARTING PROCEDURE\\n;-----'))\n",
         "\n",
         "    # create the ending procedure\n",
         "    ending_procedure_steps = []\n",
         "    ending_procedure_steps.append(fc.ManualGcode(text='\\n;-----\\n; START OF ENDING PROCEDURE\\n;-----'))\n",
         "    ending_procedure_steps.append(fc.PrinterCommand(id='retract'))\n",
-        "    ending_procedure_steps.append(fc.ManualGcode(text='G91 ; relative coordinates'))\n",
+        "    #ending_procedure_steps.append(fc.ManualGcode(text='G91 ; relative coordinates'))\n",
+        "    ending_procedure_steps.append(fc.ManualGcode(text='M106 S0 ; set fan speed'))\n",
+        "    ending_procedure_steps.append(fc.ManualGcode(text='M140 S0 ; set bed temp and continue'))\n",
+        "    ending_procedure_steps.append(fc.ManualGcode(text='M104 S0 ; set hotend temp and continue'))\n",
+        "    ending_procedure_steps.append(fc.ManualGcode(text='M84 ; disable steppers'))\n",
         "    ending_procedure_steps.append(fc.ManualGcode(text='G28 ; home'))\n",
+        "    # or ending_procedure_steps.append(fc.PrinterCommand(id='home'))\n",
         "\n",
         "    # combine start procedure and design to create the overall procedure\n",
         "    steps = starting_procedure_steps + steps + ending_procedure_steps\n",
