--- a/models/colab/anyangle_phone_stand_colab.ipynb
+++ b/models/colab/anyangle_phone_stand_colab.ipynb
@@ -37,13 +37,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 45,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "N9j0I72eg7Nv",
-        "outputId": "2abbfd9a-0712-44f4-f61d-a3b5281b2c80"
+        "outputId": "bc1aeb41-1d92-47a6-a18a-1d852aabebaf"
       },
       "outputs": [
         {
@@ -52,8 +52,7 @@
           "text": [
             "  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
             "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
-            "  Preparing metadata (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Building wheel for fullcontrol (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n"
+            "  Preparing metadata (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n"
           ]
         }
       ],
@@ -68,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 46,
       "metadata": {
         "id": "UIK9l6C6g7Nw"
       },
@@ -87,7 +86,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 47,
       "metadata": {
         "id": "pnFBWutLg7Nx"
       },
@@ -126,7 +125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 48,
       "metadata": {
         "id": "SVHS_ghQg7Ny"
       },
@@ -137,7 +136,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 49,
       "metadata": {
         "id": "sb2O-zA4g7Nz"
       },
@@ -359,14 +358,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 50,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
         },
         "id": "evfJ6S5_g7N0",
-        "outputId": "8fbdfe87-fd58-4d02-c29f-071abaa043ba"
+        "outputId": "e204882e-0f54-4a64-fbc2-85319e19d6ef"
       },
       "outputs": [
         {
@@ -428,7 +427,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_7dd91743-2256-4b47-a72a-63a04de6f52b\", \"anyangle_phone_stand.gcode\", 2004951)"
+              "download(\"download_98cbca4d-c8d9-409d-9200-f32b0bc11477\", \"anyangle_phone_stand.gcode\", 2004626)"
             ]
           },
           "metadata": {}
@@ -455,17 +454,10 @@
         "\n",
         "    # create the starting procedure\n",
         "    starting_procedure_steps = []\n",
-        "    starting_procedure_steps.append(fc.ManualGcode(text='\\n;-----\\n; END OF STARTING PROCEDURE\\n;-----'))\n",
         "\n",
         "    # create the ending procedure\n",
         "    ending_procedure_steps = []\n",
-        "    ending_procedure_steps.append(fc.ManualGcode(text='\\n;-----\\n; START OF ENDING PROCEDURE\\n;-----'))\n",
         "    ending_procedure_steps.append(fc.PrinterCommand(id='retract'))\n",
-        "    #ending_procedure_steps.append(fc.ManualGcode(text='G91 ; relative coordinates'))\n",
-        "    ending_procedure_steps.append(fc.ManualGcode(text='M106 S0 ; set fan speed'))\n",
-        "    ending_procedure_steps.append(fc.ManualGcode(text='M140 S0 ; set bed temp and continue'))\n",
-        "    ending_procedure_steps.append(fc.ManualGcode(text='M104 S0 ; set hotend temp and continue'))\n",
-        "    ending_procedure_steps.append(fc.ManualGcode(text='M84 ; disable steppers'))\n",
         "    ending_procedure_steps.append(fc.ManualGcode(text='G28 ; home'))\n",
         "    # or ending_procedure_steps.append(fc.PrinterCommand(id='home'))\n",
         "\n",
