--- a/models/colab/anyangle_phone_stand_colab.ipynb
+++ b/models/colab/anyangle_phone_stand_colab.ipynb
@@ -37,13 +37,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 51,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "N9j0I72eg7Nv",
-        "outputId": "bc1aeb41-1d92-47a6-a18a-1d852aabebaf"
+        "outputId": "69ff720b-e33b-4271-d0f0-f447baacf3a3"
       },
       "outputs": [
         {
@@ -67,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 52,
       "metadata": {
         "id": "UIK9l6C6g7Nw"
       },
@@ -78,15 +78,16 @@
         "design_name = 'anyangle_phone_stand'\n",
         "nozzle_temp = 195\n",
         "bed_temp = 65\n",
-        "material_flow_percent = 150\n",
+        "material_flow_percent = 160\n",
         "print_speed_percent = 100\n",
         "fan_percent = 50\n",
-        "printer_name='generic' # generic / ultimaker2plus / prusa_i3 / ender_3 / cr_10 / bambulab_x1 / toolchanger_T0"
+        "printer_name='generic' # generic / ultimaker2plus / prusa_i3 / ender_3 / cr_10 / bambulab_x1 / toolchanger_T0\n",
+        "# this is for WASP 2040 and .8mm nozzle"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 53,
       "metadata": {
         "id": "pnFBWutLg7Nx"
       },
@@ -125,7 +126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 54,
       "metadata": {
         "id": "SVHS_ghQg7Ny"
       },
@@ -136,7 +137,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 55,
       "metadata": {
         "id": "sb2O-zA4g7Nz"
       },
@@ -145,7 +146,7 @@
         "# generate the design (make sure you've run the above cells before running this cell)\n",
         "\n",
         "# 0.3 # try 0.6, 0.3 or 1, 0.5 (slow speeds down proportionally for bigger size)\n",
-        "EW, EH = 0.8, 0.4\n",
+        "EW, EH = 0.8, 0.5\n",
         "\n",
         "if target == \"visualize\":\n",
         "    EH = 3*EH\n",
@@ -358,14 +359,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 56,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
         },
         "id": "evfJ6S5_g7N0",
-        "outputId": "e204882e-0f54-4a64-fbc2-85319e19d6ef"
+        "outputId": "44268e67-1e5a-482b-be5a-b0dcea3b74c0"
       },
       "outputs": [
         {
@@ -427,7 +428,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_98cbca4d-c8d9-409d-9200-f32b0bc11477\", \"anyangle_phone_stand.gcode\", 2004626)"
+              "download(\"download_05636be8-8bb7-4dfd-bbfe-afc0baaf4ff3\", \"anyangle_phone_stand.gcode\", 1604245)"
             ]
           },
           "metadata": {}
