--- a/models/colab/anyangle_phone_stand_colab_v2.ipynb
+++ b/models/colab/anyangle_phone_stand_colab_v2.ipynb
@@ -37,13 +37,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 101,
+      "execution_count": 161,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "N9j0I72eg7Nv",
-        "outputId": "dcaca82f-c64e-4df4-939d-e8b9d636a4a0"
+        "outputId": "50051b1a-d13c-40f6-aeb3-13b86fd719e4"
       },
       "outputs": [
         {
@@ -67,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 102,
+      "execution_count": 162,
       "metadata": {
         "id": "UIK9l6C6g7Nw"
       },
@@ -87,7 +87,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 103,
+      "execution_count": 163,
       "metadata": {
         "id": "pnFBWutLg7Nx"
       },
@@ -126,7 +126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": 164,
       "metadata": {
         "id": "SVHS_ghQg7Ny"
       },
@@ -137,7 +137,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 105,
+      "execution_count": 165,
       "metadata": {
         "id": "sb2O-zA4g7Nz"
       },
@@ -388,14 +388,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 106,
+      "execution_count": 166,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
         },
         "id": "evfJ6S5_g7N0",
-        "outputId": "4775592f-7308-4f00-b441-0cb97aafa0e8"
+        "outputId": "cbd4ef04-2c76-44e8-a200-e43c44657105"
       },
       "outputs": [
         {
@@ -457,7 +457,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_0c2edc52-92fc-42b5-b840-0665cfab3671\", \"anyangle_phone_stand.gcode\", 1892187)"
+              "download(\"download_a2ee8cbe-7b22-46ee-98aa-d174afbfbfc6\", \"anyangle_phone_stand.gcode\", 1896629)"
             ]
           },
           "metadata": {}
@@ -484,12 +484,16 @@
         "\n",
         "    # create the starting procedure\n",
         "    starting_procedure_steps = []\n",
+        "    starting_procedure_steps.append(fc.ManualGcode(text='G28 ; home all axes'))\n",
         "\n",
-        "    # create the ending procedure\n",
+        "\n",
+        "    # Create the ending procedure\n",
         "    ending_procedure_steps = []\n",
         "    ending_procedure_steps.append(fc.PrinterCommand(id='retract'))\n",
-        "    ending_procedure_steps.append(fc.ManualGcode(text='G28 ; home'))\n",
-        "    # or ending_procedure_steps.append(fc.PrinterCommand(id='home'))\n",
+        "    ending_procedure_steps.append(fc.ManualGcode(text='G28 ; home all axes'))\n",
+        "    ending_procedure_steps.append(fc.ManualGcode(text='M104 S0 ; turn off hotend'))\n",
+        "    ending_procedure_steps.append(fc.ManualGcode(text='M140 S0 ; turn off bed'))\n",
+        "    ending_procedure_steps.append(fc.ManualGcode(text='M107 ; turn off fan'))\n",
         "\n",
         "    # combine start procedure and design to create the overall procedure\n",
         "    steps = starting_procedure_steps + steps + ending_procedure_steps\n",
@@ -517,7 +521,7 @@
       "metadata": {
         "id": "FfXb95-Hw2C5"
       },
-      "execution_count": 107,
+      "execution_count": 167,
       "outputs": []
     },
     {
@@ -634,9 +638,9 @@
           "height": 17
         },
         "id": "bNM4TL8PwhY0",
-        "outputId": "1b5ad07f-e0f2-45f0-dcbf-a8800fa76f08"
+        "outputId": "387e5a82-4cda-47b9-d947-3da353bb4a59"
       },
-      "execution_count": 108,
+      "execution_count": 168,
       "outputs": [
         {
           "output_type": "display_data",
@@ -697,7 +701,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_8d7c358b-8e57-4ec3-a9e1-39309d2a79e0\", \"middle_slice.svg\", 33498)"
+              "download(\"download_3efd3a8c-3c9f-46d2-9999-183d7edefe98\", \"middle_slice.svg\", 33560)"
             ]
           },
           "metadata": {}
@@ -761,7 +765,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_d21a1dac-2e6c-4763-ba44-6662552dabeb\", \"bottom_slice.svg\", 33490)"
+              "download(\"download_87d648dd-a1aa-442c-bc3a-c99fbfecb392\", \"bottom_slice.svg\", 33551)"
             ]
           },
           "metadata": {}
@@ -875,7 +879,7 @@
       "metadata": {
         "id": "BJ8gqIBszXll"
       },
-      "execution_count": 109,
+      "execution_count": 169,
       "outputs": []
     },
     {
@@ -931,9 +935,9 @@
           "height": 17
         },
         "id": "GarRJqi3zurD",
-        "outputId": "dd586237-7eec-4801-f08b-991de048c1a8"
+        "outputId": "b560c809-7dfc-49e3-c7e1-525ba1ec6a9f"
       },
-      "execution_count": 110,
+      "execution_count": 170,
       "outputs": [
         {
           "output_type": "display_data",
@@ -994,7 +998,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_d93ec620-4ded-42f2-bd56-97a09f72d87d\", \"middle_outline.svg\", 16861)"
+              "download(\"download_b091a702-53b6-4a44-921d-e679de63e969\", \"middle_outline.svg\", 16911)"
             ]
           },
           "metadata": {}
@@ -1058,7 +1062,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_ae14cc05-b5e9-4783-a5cb-872ec25e7ed1\", \"middle_outline.dxf\", 29211)"
+              "download(\"download_99eb5425-2f77-4013-9974-113459b76c93\", \"middle_outline.dxf\", 29293)"
             ]
           },
           "metadata": {}
@@ -1122,7 +1126,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_fff30c93-e486-49ca-8a72-7c096e46091c\", \"bottom_outline.svg\", 16841)"
+              "download(\"download_7d09a2c6-d1a1-4399-aee4-96b0688631a3\", \"bottom_outline.svg\", 16917)"
             ]
           },
           "metadata": {}
@@ -1186,7 +1190,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_fd19f7e9-7ca9-4189-ab1c-8b4813e360d1\", \"bottom_outline.dxf\", 29193)"
+              "download(\"download_805810f3-f4b8-48d2-af53-97f4e370fc8b\", \"bottom_outline.dxf\", 29295)"
             ]
           },
           "metadata": {}
