--- a/models/colab/anyangle_phone_stand_colab_v2.ipynb
+++ b/models/colab/anyangle_phone_stand_colab_v2.ipynb
@@ -37,13 +37,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 161,
+      "execution_count": 191,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "N9j0I72eg7Nv",
-        "outputId": "50051b1a-d13c-40f6-aeb3-13b86fd719e4"
+        "outputId": "550a1f4e-06c4-4783-b453-c39d3d1cdc4a"
       },
       "outputs": [
         {
@@ -67,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 162,
+      "execution_count": 192,
       "metadata": {
         "id": "UIK9l6C6g7Nw"
       },
@@ -87,7 +87,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 163,
+      "execution_count": 193,
       "metadata": {
         "id": "pnFBWutLg7Nx"
       },
@@ -126,7 +126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 164,
+      "execution_count": 194,
       "metadata": {
         "id": "SVHS_ghQg7Ny"
       },
@@ -137,7 +137,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 165,
+      "execution_count": 195,
       "metadata": {
         "id": "sb2O-zA4g7Nz"
       },
@@ -388,14 +388,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 166,
+      "execution_count": 196,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
         },
         "id": "evfJ6S5_g7N0",
-        "outputId": "cbd4ef04-2c76-44e8-a200-e43c44657105"
+        "outputId": "0891113c-015f-4917-eddb-4a7318f36886"
       },
       "outputs": [
         {
@@ -457,7 +457,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_a2ee8cbe-7b22-46ee-98aa-d174afbfbfc6\", \"anyangle_phone_stand.gcode\", 1896629)"
+              "download(\"download_232ddbb9-bdc6-4067-9b49-b2a7f18c24f5\", \"anyangle_phone_stand.gcode\", 1892354)"
             ]
           },
           "metadata": {}
@@ -467,8 +467,6 @@
         "# preview the design or save to gcode\n",
         "\n",
         "if target == 'gcode':\n",
-        "    # add point at start of print for a nice lead-in line\n",
-        "    steps.insert(0, fc.Point(x=0, y=0, z=steps[0].z))\n",
         "    # create the initialize procedure (i.e. start_gcode)\n",
         "    gcode_controls = fc.GcodeControls(\n",
         "        printer_name=printer_name,\n",
@@ -485,11 +483,15 @@
         "    # create the starting procedure\n",
         "    starting_procedure_steps = []\n",
         "    starting_procedure_steps.append(fc.ManualGcode(text='G28 ; home all axes'))\n",
+        "    starting_procedure_steps.append(fc.ManualGcode(text='G1 Z0 F3000 ; move to bed level'))\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "    # Create the ending procedure\n",
         "    ending_procedure_steps = []\n",
         "    ending_procedure_steps.append(fc.PrinterCommand(id='retract'))\n",
+        "    ending_procedure_steps.append(fc.ManualGcode(text='G1 Z100 F3000 ; lift before shutdown'))\n",
         "    ending_procedure_steps.append(fc.ManualGcode(text='G28 ; home all axes'))\n",
         "    ending_procedure_steps.append(fc.ManualGcode(text='M104 S0 ; turn off hotend'))\n",
         "    ending_procedure_steps.append(fc.ManualGcode(text='M140 S0 ; turn off bed'))\n",
@@ -497,6 +499,11 @@
         "\n",
         "    # combine start procedure and design to create the overall procedure\n",
         "    steps = starting_procedure_steps + steps + ending_procedure_steps\n",
+        "\n",
+        "\n",
+        "    # add point at start of print for a nice lead-in line\n",
+        "    steps.insert(0, fc.Point(x=0, y=0, z=steps[0].z))\n",
+        "\n",
         "\n",
         "    gcode = fc.transform(steps, 'gcode', gcode_controls)\n",
         "    open(f'{design_name}.gcode', 'w').write(gcode)\n",
@@ -521,7 +528,7 @@
       "metadata": {
         "id": "FfXb95-Hw2C5"
       },
-      "execution_count": 167,
+      "execution_count": 197,
       "outputs": []
     },
     {
@@ -638,9 +645,9 @@
           "height": 17
         },
         "id": "bNM4TL8PwhY0",
-        "outputId": "387e5a82-4cda-47b9-d947-3da353bb4a59"
+        "outputId": "06118ed5-1c00-4a43-f7ba-838c8224dda4"
       },
-      "execution_count": 168,
+      "execution_count": 198,
       "outputs": [
         {
           "output_type": "display_data",
@@ -701,7 +708,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_3efd3a8c-3c9f-46d2-9999-183d7edefe98\", \"middle_slice.svg\", 33560)"
+              "download(\"download_b8f17abd-59e5-4fe3-bbee-786b1bf5dfac\", \"middle_slice.svg\", 33498)"
             ]
           },
           "metadata": {}
@@ -765,7 +772,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_87d648dd-a1aa-442c-bc3a-c99fbfecb392\", \"bottom_slice.svg\", 33551)"
+              "download(\"download_5b6ed7fe-7519-4719-872e-3010b49d542b\", \"bottom_slice.svg\", 33490)"
             ]
           },
           "metadata": {}
@@ -879,7 +886,7 @@
       "metadata": {
         "id": "BJ8gqIBszXll"
       },
-      "execution_count": 169,
+      "execution_count": 199,
       "outputs": []
     },
     {
@@ -935,9 +942,9 @@
           "height": 17
         },
         "id": "GarRJqi3zurD",
-        "outputId": "b560c809-7dfc-49e3-c7e1-525ba1ec6a9f"
+        "outputId": "571de7ca-2ed4-4365-e6b9-176e49cba1e2"
       },
-      "execution_count": 170,
+      "execution_count": 200,
       "outputs": [
         {
           "output_type": "display_data",
@@ -998,7 +1005,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_b091a702-53b6-4a44-921d-e679de63e969\", \"middle_outline.svg\", 16911)"
+              "download(\"download_939a8cd9-413f-4bd2-849e-ffefe2c7b08c\", \"middle_outline.svg\", 16861)"
             ]
           },
           "metadata": {}
@@ -1062,7 +1069,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_99eb5425-2f77-4013-9974-113459b76c93\", \"middle_outline.dxf\", 29293)"
+              "download(\"download_28ea8dce-3846-4abb-8b73-e7371b9a142d\", \"middle_outline.dxf\", 29211)"
             ]
           },
           "metadata": {}
@@ -1126,7 +1133,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_7d09a2c6-d1a1-4399-aee4-96b0688631a3\", \"bottom_outline.svg\", 16917)"
+              "download(\"download_eb7ca7d2-0abe-40da-8b92-7ad54d9f95a0\", \"bottom_outline.svg\", 16841)"
             ]
           },
           "metadata": {}
@@ -1190,7 +1197,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_805810f3-f4b8-48d2-af53-97f4e370fc8b\", \"bottom_outline.dxf\", 29295)"
+              "download(\"download_b7fb4435-9679-4058-8ee5-cc60a275b153\", \"bottom_outline.dxf\", 29193)"
             ]
           },
           "metadata": {}
