--- a/models/colab/anyangle_phone_stand_colab_v2.ipynb
+++ b/models/colab/anyangle_phone_stand_colab_v2.ipynb
@@ -486,6 +486,7 @@
         "    # create the starting procedure\n",
         "    starting_procedure_steps = []\n",
         "    starting_procedure_steps.append(fc.ManualGcode(text='G28 ; home all axes'))\n",
+        "    starting_procedure_steps.append(fc.ManualGcode(text='G1 Z0 F3000 ; move to bed level'))\n",
         "\n",
         "    # create the ending procedure\n",
         "    ending_procedure_steps = []\n",
